--- a/index.css
+++ b/index.css
@@ -6,9 +6,9 @@
 } 
 body
 {
-    width: 100%;
     background: #1d1c1c;
     font-family: montserrat;
+    scroll-behavior: smooth;
 }
 .html
 {
@@ -49,14 +49,15 @@ nav ul li:hover a{
 {
     border-bottom: 1px solid black;
 } */
-#icon{
-    font-size: 24px;
-    cursor: pointer;
-    color: #ff004f;
-    line-height: 80px;
-    float: right;
-    margin-right: 40px;
-    display: none;
+#icon {
+  position: fixed;
+  top: 0;
+  right: 10px;
+  font-size: 24px;
+  cursor: pointer;
+  color: #ff004f;
+  line-height: 90px;
+  display: none;
 }
 nav img
 {
@@ -96,6 +97,7 @@ nav img
 }
 .bio h1{
     color: #ff004f;
+    margin-left: 10px;
 }
 .bio h1 span{
     color: #fff;
@@ -103,9 +105,25 @@ nav img
 .bio p{
     width: 200px;
     height: 50px;
-    margin: 0 70px 20px;
+    margin: 0 50px 50px;
     font-size: 20px;
 } 
+
+.animated-test {
+    display: inline-block;
+    animation: slide-in 3s ease-in-out infinite alternate;
+}
+
+@keyframes slide-in {
+    0% {
+        transform: translateX(-60px);
+        opacity: 0;
+    }
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
 
 /* .........Skills.......... */
 .Skills
@@ -175,6 +193,12 @@ nav img
     margin-bottom: 15px;
     border-radius: 10px 10px 0 0;
 }
+/* .card-image img {
+    height: 100px;
+    width: 270px;
+    border-radius: 10px 10px 0 0;
+    margin-left: 10px;
+} */
 .card h2{
     padding: 10px;
 }
@@ -335,11 +359,19 @@ nav img
  }
   
 /* ...........MediaQuery....... */
-@media (max-width:35em) {
+@media (max-width:768px) {
     nav img{
         font-size: 30px;
-        padding-left: 60px;
+        padding-left: 40px;
         max-width: 100%;
+    }
+    body {
+        overflow-x: hidden;
+        max-width: 100%;
+    }
+    html {
+        overflow-x: hidden;
+        scroll-behavior: smooth;
     }
     nav ul{
         margin-right: 20px;
@@ -373,8 +405,6 @@ nav img
     .Home{
         width: 100%;
         font-size: 13px;
-        /* background-color: red; */
-        /* position: fi; */
     }
     .About-me, .bio{
         flex-basis: 100%;
@@ -385,6 +415,8 @@ nav img
     .Skills{
         width: 100%;
         height: 100vh;
+        overflow-x: hidden;
+        /* background-color: red; */
     }
     svg{
         width: 100%;
@@ -414,10 +446,6 @@ nav img
     .card-image{
         height: 100px;
     }
-    /* .card:hover{
-        background-color: #ff004f;
-        transform: translateY(-10px);
-    } */
     .Contact{
         width: 100%;
         height: 100%;
